--- a/main.css
+++ b/main.css
@@ -511,13 +511,14 @@ input[type="search"] {
 }
 
 .article-container {
-    width: min(100%,990px);
+    width: min(100%,1400px);
     height: 100%;
-    min-height: 475px;
+    min-height: 600px;
     border-radius: 16px;
     background: #2C2F48; 
     overflow-y: scroll;   
     padding: 30px 20px;
+    margin-top: 50px;
 }
 
 .article-container > pre{
