--- a/main.css
+++ b/main.css
@@ -1650,6 +1650,9 @@ h5::first-letter {
 
 }
 @media screen and (max-width: 680px){
+    .master_play .wave {
+        display: none;
+    }
     header {
         width: 100%;
         height: 100vh;
