--- a/main.css
+++ b/main.css
@@ -238,7 +238,7 @@ body {
     bottom: -10px;
     height: 3px;
     background-color: #00E9FF;
-    transition: transform .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 body .navbar > a:hover::before {
